bundled handlebars, updated readme

--- a/local/graphic-local.html
+++ b/local/graphic-local.html
@@ -31,7 +31,7 @@
         <script type="text/javascript" src="../common/GoogleSheetToJS.js"></script>
         <script type="text/javascript" src="../common/creds.js"></script>
         <script type="text/javascript" src="../common/helpers.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+        <script type="text/javascript" src="../common/handlebars.js"></script>
         <style id="customStyles">
         </style>
     </head>
