--- a/local/graphic-local.html
+++ b/local/graphic-local.html
@@ -42,6 +42,18 @@
             <div id="errors">&nbsp;</div>
         </div>
     </body>
-    <script type="text/javascript" src="./local-template-loader.js"></script>
+    <script type="text/javascript">
+        function loadTemplate(name) {
+            console.log(`Loading template: '${name}'`);
+            var scriptElement = document.createElement("script");
+            scriptElement.src = `../templates/${name}/script.js`;
+            document.head.appendChild(scriptElement);
+            scriptElement.onload = function () {
+                load();
+            };
+
+            addStylesheet(`../templates/${name}/styles.css`);
+        }
+    </script>
     <script type="text/javascript" src="../common/graphic.js"></script>
 </html>
