--- a/standalone/graphic-remote.html
+++ b/standalone/graphic-remote.html
@@ -33,9 +33,10 @@
                 static getApiKey() { return "INSERT_YOUR_GOOGLE_SHEETS_API_KEY_HERE"; }
             }
         </script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/GrandyB/SheetToHTML@latest/src/common/GoogleSheetToJS.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/GrandyB/SheetToHTML@latest/src/common/helpers.js"></script>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/GrandyB/SheetToHTML@latest/src/common/partials.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/GrandyB/SheetToHTML@latest/src/common/styles.css" />
         <style id="customStyles">
         </style>
