--- a/src/graphic-local.html
+++ b/src/graphic-local.html
@@ -46,13 +46,18 @@
     </body>
     <script type="text/javascript">
         function loadTemplate(name) {
-            console.log(`Loading template: '${name}'`);
-            var scriptElement = loadScript(`../templates/${name}/script.js`);
-            scriptElement.onload = function () {
-                load();
-            };
-
-            addStylesheet(`../templates/${name}/styles.css`);
+            return new Promise((resolve, reject) => {
+                console.log(`Loading template: '${name}'`);
+                var scriptElement = loadScript(`../templates/${name}/script.js`);
+                scriptElement.onload = function () {
+                    load();
+                    addStylesheet(`../templates/${name}/styles.css`);
+                    resolve();
+                };
+                scriptElement.onerror = function () {
+                    reject(new Error(`Failed to load template '${name}'`));
+                };
+            });
         }
     </script>
     <script type="text/javascript" src="./common/graphic.js"></script>
