text swapping options

--- a/src/graphic-local.html
+++ b/src/graphic-local.html
@@ -33,6 +33,7 @@
         <script type="text/javascript" src="./common/GoogleSheetToJS.js"></script>
         <script type="text/javascript" src="./common/helpers.js"></script>
         <script type="text/javascript" src="./common/partials.js"></script>
+        <script type="text/javascript" src="./common/animator.js"></script>
         <link rel="stylesheet" href="./common/styles.css" />
         <style id="customStyles">
         </style>
