--- a/standalone/graphic-remote.html
+++ b/standalone/graphic-remote.html
@@ -34,6 +34,7 @@
             }
         </script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/GrandyB/SheetToHTML@latest/src/common/animator.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/GrandyB/SheetToHTML@latest/src/common/GoogleSheetToJS.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/GrandyB/SheetToHTML@latest/src/common/helpers.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/GrandyB/SheetToHTML@latest/src/common/partials.js"></script>
